# covfie

./: .clang-format  .gersemirc  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  REUSE.toml  spack.yaml
.github/workflows/: builds.yml  checks.yml
benchmarks/: CMakeLists.txt
benchmarks/common/: CMakeLists.txt  atlas.cpp  test_field.cpp
benchmarks/common/covfie/benchmark/: atlas.hpp  common.hpp  lorentz.hpp  pattern.hpp  propagate.hpp  register.hpp  test_field.hpp  types.hpp
benchmarks/core/: CMakeLists.txt  benchmark_constant.cpp  benchmark_core.cpp  benchmark_propagation.cpp
benchmarks/cpu/: CMakeLists.txt  benchmark_cpu.cpp
benchmarks/cpu/backends/: atlas.hpp  constant.hpp  test_field.hpp
benchmarks/cpu/patterns/: lorentz.hpp  lorentz_euler.hpp  random.hpp  sequential.hpp
benchmarks/cuda/: CMakeLists.txt  benchmark_cuda.cu
benchmarks/cuda/backends/: atlas.hpp  test_field.hpp
benchmarks/cuda/patterns/: euler.hpp  lorentz.hpp  lorentz_euler.hpp  random.hpp  runge_kutta4.hpp  scan.hpp
benchmarks/openmp/: CMakeLists.txt  benchmark_openmp.cpp
benchmarks/openmp/backends/: constant.hpp  test_field.hpp
benchmarks/openmp/patterns/: euler.hpp  lorentz.hpp  lorentz_euler.hpp  runge_kutta4.hpp
ci/: check_license.py
cmake/: CgvFindVersion.cmake  covfie-compiler-options-cpp.cmake  covfie-compiler-options-cuda.cmake  covfie-functions.cmake  covfieConfig.cmake.in
docs/: conf.py  index.rst
docs/user/: backend.rst  design.rst  installation.rst  integration.rst
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt
examples/common/bitmap/: CMakeLists.txt  bitmap.cpp  bitmap.hpp
examples/core/: CMakeLists.txt  asm.cpp  convert_atlas_bfield.cpp  convert_bfield.cpp  convert_bfield_csv.cpp  generate_test_field.cpp  readme_example_1.cpp  readme_example_2.cpp  scaleup_atlas_bfield.cpp  scaleup_bfield.cpp  shuffle_asm.cpp  slice3dto2d.cpp
examples/cpu/: CMakeLists.txt  render_image.cpp  render_slice.cpp
examples/cuda/: CMakeLists.txt  render_slice.cu  render_slice_texture.cu
extra/layers/: Main.hs
extra/layouts/: .gitignore  Makefile  README.md  layouts.cpp  make_table.py  plot.gnuplot
extra/parameter_pack_gen/: gen_parameter_pack_code.py
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/covfie/core/: array.hpp  concepts.hpp  definitions.hpp  field.hpp  field_view.hpp  parameter_pack.hpp  qualifiers.hpp  vector.hpp
lib/core/covfie/core/algebra/: affine.hpp  matrix.hpp  vector.hpp
lib/core/covfie/core/backend/: builder.hpp  constant.hpp  identity.hpp  modular.hpp
lib/core/covfie/core/backend/datatype/: datatype.hpp
lib/core/covfie/core/backend/initial/: array.hpp  constant.hpp  identity.hpp
lib/core/covfie/core/backend/layout/: strided.hpp
lib/core/covfie/core/backend/primitive/: array.hpp  constant.hpp  identity.hpp
lib/core/covfie/core/backend/storage/: array.hpp
lib/core/covfie/core/backend/transformer/: affine.hpp  backup.hpp  clamp.hpp  covariant_cast.hpp  dereference.hpp  hilbert.hpp  linear.hpp  morton.hpp  nearest_neighbour.hpp  reference.hpp  shuffle.hpp  strided.hpp
lib/core/covfie/core/backend/transformer/boundary/: backup.hpp  clamp.hpp
lib/core/covfie/core/backend/transformer/interpolator/: linear.hpp  nearest_neighbour.hpp
lib/core/covfie/core/backend/transformer/layout/: morton.hpp  strided.hpp
lib/core/covfie/core/backend/transformer/ownership/: reference.hpp
lib/core/covfie/core/backend/vector/: input.hpp  output.hpp  transformer.hpp
lib/core/covfie/core/utility/: backend_traits.hpp  binary_io.hpp  nd_map.hpp  nd_size.hpp  numeric.hpp  static_permutation.hpp  tuple.hpp
lib/cpu/: CMakeLists.txt
lib/cpu/covfie/cpu/backend/: cpu_array.hpp
lib/cpu/covfie/cpu/backend/primitive/: c_array.hpp
lib/cpu/covfie/cpu/backend/storage/: c_array.hpp
lib/cuda/: CMakeLists.txt
lib/cuda/covfie/cuda/: error_check.hpp
lib/cuda/covfie/cuda/backend/: cuda_array.hpp
lib/cuda/covfie/cuda/backend/primitive/: cuda_device_array.hpp  cuda_texture.hpp
lib/cuda/covfie/cuda/backend/storage/: cuda_device_array.hpp  cuda_texture.hpp
lib/cuda/covfie/cuda/utility/: copy.hpp  memory.hpp  type_conversion.hpp  unique_ptr.hpp
lib/hip/: CMakeLists.txt
lib/hip/covfie/hip/: error_check.hpp
lib/hip/covfie/hip/backend/primitive/: hip_device_array.hpp
lib/hip/covfie/hip/utility/: copy.hpp  memory.hpp  unique_ptr.hpp
lib/sycl/: CMakeLists.txt
lib/sycl/covfie/sycl/backend/primitive/: sycl_device_array.hpp
lib/sycl/covfie/sycl/utility/: copy.hpp  memory.hpp  unique_ptr.hpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_algebra.cpp  test_array_binary_io.cpp  test_atlas_like_io.cpp  test_binary_io.cpp  test_build.cpp  test_canonical.cpp  test_constant_field.cpp  test_covariant_cast.cpp  test_field_builder.cpp  test_identity_backend.cpp  test_linear_interpolator.cpp  test_nearest_neighbour_interpolator.cpp  test_static_permutation.cpp  test_transformer_affine.cpp  test_transformer_clamp.cpp  test_utility.cpp  test_utility_numeric.cpp
tests/cpu/: CMakeLists.txt  test_cpu_array_backend.cpp
tests/cuda/: CMakeLists.txt  retrieve_vector.hpp  test_cuda_array.cu  test_cuda_strided_array.cu  test_cuda_texture.cu
tests/downstream/: CMakeLists.txt  main.cpp
tests/googletest/: CMakeLists.txt
tests/hip/: CMakeLists.txt  retrieve_vector.hpp  test_hip_array.hip
tests/sycl/: CMakeLists.txt  retrieve_vector.hpp  test_sycl_array.cpp
tests/utils/: CMakeLists.txt  tmp_file.cpp  tmp_file.hpp
